--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-
+<!DOCTYPE html>
 <html>
 <head>
 </head>
 <body>
+  <h1>Guess the Number!</h1>
 	<script>
         let num = Math.floor(Math.random() * 11);
 
