--- a/index.html
+++ b/index.html
@@ -6,16 +6,38 @@
   <h1>Guess the Number!</h1>
 	<script>
         let num = Math.floor(Math.random() * 11);
+	
+	//will turn true if right number is given
+	let gotIt = false;
+	let guess = prompt("guess a number between 1 and 10");
+	let numGuesses = 0; //will store number of guesses
+		
+	while(gotIt === false){
+		numGuesses++;
+     	   if(num == guess)
+       		    {//true tell user and break out of loop
+            		//bresk out of loop
+			gotIt =true;
+        	    }
+	   else	    //false tells user to try to guess again
+	   	    {
+			    if(num > guess) //higher
+			       {
+				 guess = prompt("Higher");
+			       }
+			       else //lower
+			       {
+			        guess = prompt("Lower");
+			       }
+            	    //alert("Sorry!  You guessed " + guess + " and the number was " + num);
+			
+       		    }
+	}
+	alert("Got It!! You guessed " + numGuesses + " times!");
+        
 
-        let guess = prompt("guess a number between 1 and 10");
 
-        if(num == guess)
-        {
-            alert("Got it!");
-        }else{
-            alert("Sorry!  You guessed " + guess + " and the number was " + num);
-        }
-
+	
 	</script>
 </body>
 </html>
