--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			
        		    }
 	}
-	alert("Got It!! You guessed " + numGuesses + " times!");
+	alert("Got It!! You guess(s) " + numGuesses + " times!");
         
 
 
